<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appDesc"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/appDesc"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realmDesc"
        android:layout_below="@+id/appDesc"
        android:gravity="center"
        android:text="@string/relDesc"
        android:layout_marginBottom="10dp"
        android:textColor="#ffff0600" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realmSelect"
        android:layout_alignBottom="@+id/realmSpinner"
        android:layout_below="@+id/realmDesc"
        android:gravity="center"
        android:text="@string/realmSelect"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/realmSpinner"
        android:layout_below="@+id/realmDesc"
        android:layout_toRightOf="@+id/realmSelect"
        android:text="@string/realm"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/realmSelect"
        android:text="@string/guildName"
        android:layout_alignBottom="@+id/guildText"
        android:gravity="center"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/realmSpinner"
        android:layout_toRightOf="@+id/realmSelect"
        android:id="@+id/guildText"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guildText"
        android:layout_centerHorizontal="true"
        android:text="@string/submitButton"
        android:layout_marginTop="10dp"
        android:id="@+id/submitButton"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/charList"
        android:layout_below="@+id/submitButton"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
